objects/Wizard_Step_Tool__c.object
<CustomObject><fields>
        <fullName>Advanced_Information__c</fullName>
        <label>Advanced Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>SDO_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDO Tool</label>
        <referenceTo>SDO_Tool__c</referenceTo>
        <relationshipName>Wizard_Step_Tools</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Tool_Order__c</fullName>
        <label>Tool Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Wizard_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wizard Step</label>
        <referenceTo>Wizard_Step__c</referenceTo>
        <relationshipName>Wizard_Step_Tools</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>SDO Wizard Step Tool</label><nameField>
        <label>Wizard Step Tool Name</label>
        <type>Text</type>
    </nameField><pluralLabel>SDO Wizard Step Tools</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>